Projeto/Compilador/tests/cases/ok/Builtin_chr_ord_OK.pas
program TB_CHRORD;
var c: char; x: integer;
begin
  c := chr(65);
  x := ord(c);
  writeln(x);
end.
