Projeto/Compilador/tests/cases/error/T14.pas
program T14;
var x: integer;
begin
  if (x and true) then
    x := 2;
end.
